--- a/A/Altice/Altice_January2020/ads/OPT_AO_64/160x600/160x600_frame1.html
+++ b/A/Altice/Altice_January2020/ads/OPT_AO_64/160x600/160x600_frame1.html
@@ -78,23 +78,23 @@
 <script type="text/javascript">
 amo.registerClick("clickUrl","http://www.altice.com");
 amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","160x600_OPT_Holiday_AO_64_Img_Frame02.png");
+amo.registerAttribute("frameImage2","IMAGE","160x600_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame03.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameImage4","IMAGE","160x600_OPT_AmazonCard_100.png");
-amo.registerAttribute("frameImage5","IMAGE","160x600_OPT_AmazonCard_100.png");
+amo.registerAttribute("frameImage5","IMAGE","160x600_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame05.png");
 amo.registerAttribute("frameText1","TEXT","Get<br>the gift that|keeps<br>on<br>giving");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 58px;left:15px;line-height: 1;'><div style='font-size: 24px;letter-spacing: -0.2px;'><div style='color: #0084d6;font-size: 75%;margin-bottom: 3px;'>Price for Life</div>Altice One<br>+ Internet</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 122px;left: 16px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 14px;letter-spacing: -0.3px;margin-top: -9px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;letter-spacing: -0.1px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 48px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Up to <font style='color:#0084d6;'>200 Mbps</font></div><div style='color:#0084d6;margin-top: -4px;margin-left: 14px;'>Internet</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top: 92px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 220</div><div style='margin-top: -4px;margin-left: 14px;'>Channels</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top: 136px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Voice Activated</div><div style='margin-top: -4px;margin-left: 14px;'>Remote</div></div><div class='AlticeRegular' style='position: absolute;top: 452px;left: 20px;font-size: 9.5px;'>Wired connection.<br>WiFi speeds may vary.</div></div>");
+amo.registerAttribute("frameText21", "TEXT", "&nbsp;");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 53px;left: 16px;line-height:1.1;'><div style='font-size: 22px;letter-spacing:-0.1px;'>TV + Fast Internet</div><div style='color:#0084d6;font-size:60px;margin-top:-4px;margin-left: -3px;letter-spacing:-2.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>54<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div></div>");
+amo.registerAttribute("frameText23", "TEXT", "<div style='top: 155px;left: 15px;font-size:16px;letter-spacing:-0.1px;'>mo./3 years<div class='AlticeRegular' style='font-size:10px;margin-top: 1px;'>plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 48px;left: 14px;line-height: 1.6;font-size: 15px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:4px;'>+</span>3 Yr. Price</div><div style='color:#0084d6;margin-top: -4px;margin-left: 14px;'>Guarantee!</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 92px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Up to 200 Mbps</div><div style='margin-top: -4px;margin-left: 14px;'>Internet</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top: 136px;left: 14px;line-height: 1.6;font-size: 15px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 220</div><div style='margin-top: -4px;margin-left: 14px;'>Channels</div></div><div class='AlticeRegular' style='position: absolute;top: 452px;left: 20px;font-size: 9.5px;'>Wired connection.<br>WiFi speeds may vary.</div>");
 amo.registerAttribute("frameText41","TEXT","<div style='top: 38px;left: 14px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 52px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -1px;'>$</sup>100</div></div>");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 103px;left: 16px;line-height: 1.1;font-size: 22px;'>Amazon.com<br>Gift Card</div>");
 amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top:154px;left: 15px;line-height: 1.2;letter-spacing: -0.3px;font-size: 10px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 110px;left:15px;line-height:0.9;'><div style='font-size: 24px;letter-spacing: -0.2px;'>Altice One<br>+ Internet</div></div>");
-amo.registerAttribute("frameText52","TEXT","<div style='top: 152px;left: 16px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 14px;letter-spacing: -0.3px;margin-top: -9px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;letter-spacing: -0.1px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText53","TEXT","<div style='top: 279px;left: 16px;line-height: 1.5;font-size: 13px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 5px;'>+</span>$100 Amazon.com</div><div style='margin-top: -5px;margin-left:14px;'>Gift Card</div><div><span style='color:#0084d6;padding-right: 5px;'>+</span>No Annual</div><div style='margin-top: -5px;margin-left:14px;'>Contract</div><div style='position: absolute;top: -20px;left: -1px;width: 128px;border: 1px solid #aaabac;'></div></div>");
+amo.registerAttribute("frameText51", "TEXT", "<div style='top: 53px;left: 16px;line-height:1.1;'><div style='font-size: 22px;letter-spacing: -0.4px;'>TV + Fast Internet</div></div>");
+amo.registerAttribute("frameText52", "TEXT", "<div style='top: 97px;left: 13px;line-height:1.1;'><div style='color:#0084d6;font-size:60px;letter-spacing:-2.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>54<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div><div style='font-size:16px;letter-spacing:-0.1px;margin-top: -7px;margin-left: 2px;'>mo./3 years<div class='AlticeRegular' style='font-size:10px;margin-top: 4px;'>plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText53", "TEXT", "<div style='top: 210px;left: 16px;line-height: 1.5;font-size: 14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right: 5px;'>+</span>$100 Amazon.com</div><div style='margin-top: -5px;margin-left:14px;'>Gift Card</div><div><span style='color:#0084d6;padding-right:4px;'>+</span>No Annual</div><div style='margin-top: -4px;margin-left: 14px;'>Contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -128,7 +128,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 279px;left: 16px;li
     <div id="frameText51" class="frameText">!{frameText51}</div>
     <div id="frameText52" class="frameText">!{frameText52}</div>
     <div id="frameText53" class="frameText">!{frameText53}</div>
-    <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div>
+    <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
       style="top:551px;
@@ -162,7 +162,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 279px;left: 16px;li
           line-height: 1.05;
           letter-spacing: 0px;
           font-weight: bold;
-          color:#292562;">
+          color:#fff;">
       </div>
       <div id="introImage2" class="asset adSizeContainer" data-image="introImage2"></div>
       <div id="introImage1" class="asset adSizeContainer" data-image="introImage1"></div>
@@ -176,9 +176,9 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 279px;left: 16px;li
           line-height: 1.05;
           letter-spacing: 0px;
           font-weight: bold;
-          color:#fff;">
+          color:#292562;">
       </div>
-      <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
+      <div id="introLogoImage" class="asset adSizeContainer" data-image="logoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
         style="top:551px;
@@ -211,12 +211,11 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 279px;left: 16px;li
         staticData: {
           logoImage: 'images/160x600_Logo_Optimum.png',
           introLogoImage: 'images/160x600_Logo_Optimum_White.png',
-          priceLabel: '160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
+          // priceLabel: '160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
           frameBackground: '160x600_OPT_Holiday_AO_64_CornerTear_Img_Frame04.png',
-          priceLabel: '160x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
-          introImage1: '160x600_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame01.png',
-          introImage2: '160x600_OPT_Holiday_AO_64_WrappingPaper_Half_Img_Frame01.png',
-          introImage3: '160x600_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame02.png',
+          introImage1: '160x600_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_WrappingPaper_Full_Img_Frame01.png',
+          introImage2: '160x600_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_WrappingPaper_Half_Img_Frame02.png',
+          introImage3: '160x600_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_WrappingPaper_Full_Img_Frame02.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
@@ -290,7 +289,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 279px;left: 16px;li
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#introImage1, #introText1', {duration:1.8, display:'none'})
           .to('#introImage2', {duration:1, display:'none'})
-          .to('#introLogoImage img', {duration:0, attr:{src: adData.logoImage}})
+          .to('#introLogoImage img', {duration:0, attr:{src: adData.introLogoImage}})
           .to('#frame1', (flag==true?{}:{delay:0.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
         gsap.delayedCall(.8, animateFrame1, [true]);
