--- a/A/Altice/Altice_January2020/ads/OPT_AO_64/300x250/300x250_frame1.html
+++ b/A/Altice/Altice_January2020/ads/OPT_AO_64/300x250/300x250_frame1.html
@@ -78,23 +78,23 @@
 <script type="text/javascript">
 amo.registerClick("clickUrl","http://www.altice.com");
 amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","300x250_OPT_Holiday_AO_64_Img_Frame02.png");
+amo.registerAttribute("frameImage2","IMAGE","300x250_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame03.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameImage4","IMAGE","300x250_OPT_AmazonCard_100.png");
-amo.registerAttribute("frameImage5","IMAGE","1x1.png");
-amo.registerAttribute("frameText1","TEXT","Get the gift that|keeps on giving");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 16px;left:20px;line-height:1.1;'><div style='font-size: 20px;letter-spacing: -0.1px;'><div style='font-size: 75%;color: #0084d6;'>Price for Life</div>Altice One + Internet</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 56px;left:20px;line-height:1.1;'><div style='color: #0084d6;font-size: 62px;margin-top: 0px;margin-left: -3px;letter-spacing: -0.7px;'><sup style='font-size: 54%;vertical-align:55%;'>$</sup>64<sup style='font-size: 54%;vertical-align:55%;'>99</sup></div></div>");
-amo.registerAttribute("frameText23","TEXT","<div style='top: 113px;left:20px;font-size: 16px;letter-spacing: -0.5px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: -1px;letter-spacing: -0.1px;'>plus taxes, fees &amp; charges</div></div>");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 43px;left: 20px;line-height: 1.6;font-size: 18px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Up to <font style='color:#0084d6;'>200 Mbps Internet</font></div></div>");
+amo.registerAttribute("frameImage5","IMAGE","300x250_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame05.png");
+amo.registerAttribute("frameText1","TEXT","&nbsp;|&nbsp;");
+amo.registerAttribute("frameText21", "TEXT", "&nbsp;");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top:23px;left:20px;line-height:1.1;'><div style='font-size:20px;letter-spacing:-0.1px;'>Altice One + Internet</div><div style='color:#0084d6;font-size:60px;margin-top:2px;margin-left: -2px;letter-spacing:-2.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>64<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div></div>");
+amo.registerAttribute("frameText23", "TEXT", "<div style='top: 103px;left:20px;font-size: 16px;letter-spacing: -0.5px;'>mo./2 yrs.<div class='AlticeRegular' style='font-size: 10px;margin-top: -1px;letter-spacing: -0.1px;'>plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 43px;left: 20px;line-height: 1.6;font-size: 18px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:4px;'>+</span><span style='color:#000;'>Up to</span> 200 Mbps Internet</font></div></div>");
 amo.registerAttribute("frameText32","TEXT","<div style='top: 70px;left: 20px;line-height: 1.4;font-size: 18px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 220 Channels</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top: 93px;left: 20px;line-height: 1.6;font-size: 18px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Voice Activated Remote</div></div><div class='AlticeRegular' style='position: absolute;top: 182px;left: 20px;font-size: 9px;line-height:1.25;'>Wired connection.<br>WiFi speeds may vary.</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top: 95px;left: 20px;line-height: 1.4;font-size: 18px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Voice Activated Remote</div></div><div class='AlticeRegular' style='position: absolute;top: 182px;left: 20px;font-size: 9px;line-height:1.25;'>Wired connection.<br>WiFi speeds may vary.</div>");
 amo.registerAttribute("frameText41","TEXT","<div style='top: 31px;left: 19px;line-height: 1.6;font-size: 16px;'><div style='color: #0084d6;font-size: 58px;'><sup style='font-size: 46%;vertical-align: 53%;margin-right: 0px;'>$</sup>100</div></div>");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 106px;left: 20px;line-height: 1;font-size: 20px;'>Amazon.com<br>Gift Card</div>");
 amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top: 183px;left: 19px;line-height: 1.1;letter-spacing: -0.25px;font-size:9.5px;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 34px;left:20px;line-height:1.1;'><div style='font-size: 20px;letter-spacing: -0.1px;'>Altice One + Internet</div></div>");
-amo.registerAttribute("frameText52","TEXT","<div style='top: 61px;left: 109px;line-height:1.1;'><div style='color: #0084d6;font-size: 61px;'><sup style='font-size: 55%;vertical-align: 53%;margin-right: 0px;'>$</sup>64<sup style='font-size: 55%;vertical-align: 58%;margin-left: 0px;'>99</sup></div><div style='font-size: 13.5px;letter-spacing:-0.1px;position: absolute;top: 41px;left: 98px;width: 100px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10px;margin-top: 1px;position: absolute;top: 21px;left: -97px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line-height:1.3;font-size:14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>$100 Amazon.com Gift Card</div><div><span style='color:#0084d6;padding-right:5px;'>+</span>No Annual Contract</div></div>");
+amo.registerAttribute("frameText51", "TEXT", "<div style='top:23px;left:20px;line-height:1.1;'><div style='font-size:20px;letter-spacing:-0.1px;'>Altice One + Internet</div></div>");
+amo.registerAttribute("frameText52", "TEXT", "<div style='top:53px;left:20px;line-height:1.1;'><div style='color:#0084d6;font-size:60px;margin-top:-4px;margin-left: -3px;letter-spacing:-2.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>64<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div><div style='font-size:16px;letter-spacing:-0.1px;margin-top:-9px;margin-left:-1px;'>mo./2 yrs.<div class='AlticeRegular' style='font-size:10px;margin-top:1px;'>plus taxes, fees & charges</div></div></div>");
+amo.registerAttribute("frameText53", "TEXT", "<div style='top:148px;left:20px;line-height:1.3;font-size:14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>$100 Amazon.com Gift Card</div><div><span style='color:#0084d6;padding-right:5px;'>+</span>No Annual Contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -128,7 +128,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
     <div id="frameText51" class="frameText">!{frameText51}</div>
     <div id="frameText52" class="frameText">!{frameText52}</div>
     <div id="frameText53" class="frameText">!{frameText53}</div>
-    <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div>
+    <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
       style="top:207px;
@@ -142,7 +142,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
       style="transform-origin:bottom center;
       -webkit-transition:opacity ease-out 0.3s, transform ease-out 0.3s;
       transition:opacity ease-out 0.3s, transform ease-out 0.3s;
-      background-color:#e2e3e4;
+      background-color:#000;
       opacity:1;">
       <div id="introImage3" class="asset adSizeContainer" data-image="introImage3"></div>
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
@@ -156,10 +156,10 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
           font-size: 31px;
           letter-spacing: -0.3px;
           font-weight: bold;
-          color:#292562;">
+          color:#fff;">
       </div>
-      <div id="introImage2" class="asset adSizeContainer" data-image="introImage2"></div>
-      <div id="introImage1" class="asset adSizeContainer" data-image="introImage1"></div>
+      <div id="introImage2" class="asset adSizeContainer" data-image="introImage2" style="opacity: 0;"></div>
+      <div id="introImage1" class="asset adSizeContainer" data-image="introImage1" style="opacity: 0;"></div>
       <div id="introText1" class="text AlticeBold"
         data-text="introText1"
         data-style="text-align:center;"
@@ -170,9 +170,9 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
           font-size: 31px;
           letter-spacing: -0.3px;
           font-weight: bold;
-          color:#fff;">
+          color:#292562;">
       </div>
-      <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
+      <div id="introLogoImage" class="asset adSizeContainer" data-image="logoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
         style="top:207px;
@@ -206,11 +206,11 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
         staticData: {
           logoImage: 'images/300x250_Logo_Optimum.png',
           introLogoImage: 'images/300x250_Logo_Optimum_White.png',
-          frameBackground: '300x250_OPT_Holiday_AO_64_CornerTear_Img_Frame04.png',
-          priceLabel: '300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
-          introImage1: '300x250_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame01.png',
-          introImage2: '300x250_OPT_Holiday_AO_64_WrappingPaper_Half_Img_Frame01.png',
-          introImage3: '300x250_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame02.png',
+          frameBackground: '1x1.png',
+          // priceLabel: '300x250_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
+          introImage1: 'frame1.png',
+          introImage2: 'frame2.png',
+          introImage3: '1x1.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
@@ -257,7 +257,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
           var frameId = 5;
           gsap.set('#frameBackground', {display: 'none'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: priceFrameAnimation, onCompleteParams:[5]})
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[5]})
           // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', {delay: 2.2, opacity:0});
         }
         var animateFrame4 = function(flag){
@@ -281,9 +281,9 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:153px;left:20px;line
         }
         var animateFrame1 = function(flag){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#introImage1, #introText1', {duration:1.8, display:'none'})
-          .to('#introImage2', {duration:1, display:'none'})
-          .to('#introLogoImage img', {duration:0, attr:{src: adData.logoImage}})
+          .to('#introLogoImage img', {duration:0, attr:{src: adData.introLogoImage}})
+          .to('#introImage1', {opacity:1, duration:0.7})
+          .to('#introImage2', {opacity:1, duration:0.7})
           .to('#frame1', (flag==true?{}:{delay:0.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
         gsap.delayedCall(.8, animateFrame1, [true]);
