--- a/A/Altice/Altice_January2020/ads/OPT_AO_64/300x600/300x600_frame3.html
+++ b/A/Altice/Altice_January2020/ads/OPT_AO_64/300x600/300x600_frame3.html
@@ -78,23 +78,23 @@
 <script type="text/javascript">
 amo.registerClick("clickUrl","http://www.altice.com");
 amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","300x600_OPT_Holiday_AO_64_Img_Frame02.png");
+amo.registerAttribute("frameImage2","IMAGE","300x600_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame03.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameImage4","IMAGE","300x600_OPT_AmazonCard_100.png");
-amo.registerAttribute("frameImage5","IMAGE","300x600_OPT_AmazonCard_100.png");
+amo.registerAttribute("frameImage5","IMAGE","300x600_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame05.png");
 amo.registerAttribute("frameText1","TEXT","Get the<br>gift that|keeps on giving");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 60px;left:21px;line-height:1;'><div style='font-size: 30px;letter-spacing: -0.2px;'><div style='color: #0084d6;font-size: 75%;margin-bottom: 7px;'>Price for Life</div>Altice One +<br>Internet</div></div>");
-amo.registerAttribute("frameText22","TEXT","<div style='top: 150px;left: 21px;line-height:1.1;'><div style='color: #0084d6;font-size: 69px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 15px;letter-spacing: -0.2px;margin-top: -13px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 11px;margin-top: 1px;letter-spacing: -0.1px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 55px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Up to <font style='color:#0084d6;'>200 Mbps Internet</font></div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top: 90px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 220 Channels</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top: 125px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Voice Activated Remote</div></div><div class='AlticeRegular' style='position: absolute;top: 500px;left: 20px;font-size: 9.5px;'>Wired connection.<br>WiFi speeds may vary.</div></div>");
+amo.registerAttribute("frameText21", "TEXT", "&nbsp;");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 69px;left: 21px;line-height:1.2;'><div style='font-size: 23px;letter-spacing: 0.1px;'>TV + Fast Internet</div><div style='color: #0084d6;font-size: 80px;margin-top: -7px;margin-left: -4px;letter-spacing: -4.5px;'><sup style='font-size:60%;vertical-align: 46%;'>$</sup>54<sup style='font-size: 60%;vertical-align: 46%;letter-spacing: -2px;'>99</sup></div></div>");
+amo.registerAttribute("frameText23", "TEXT", "<div style='top: 165px;left: 20px;font-size: 20px;letter-spacing:-0.1px;'>mo./3 years<div class='AlticeRegular' style='font-size: 12px;letter-spacing: -0.2px;'>plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 55px;left: 20px;line-height: 1.6;font-size: 22px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:4px;'>+</span>3 Yr. Price Guarantee!</font></div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 90px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Up to 200 Mbps Internet</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top: 125px;left: 20px;line-height: 1.6;font-size: 22px;'><div><span style='color:#0084d6;padding-right:4px;'>+</span>Over 220 Channels</div></div><div class='AlticeRegular' style='position: absolute;top: 500px;left: 20px;font-size: 9.5px;'>Wired connection.<br>WiFi speeds may vary.</div>");
 amo.registerAttribute("frameText41","TEXT","<div style='top: 27px;left: 17px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 84px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -3px;'>$</sup>100</div></div>");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 135px;left: 20px;line-height: 1.1;font-size: 32px;'>Amazon.com<br>Gift Card</div>");
 amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top: 212px;left: 20px;line-height: 1.2;letter-spacing: -0.25px;font-size: 9pt;'>Restrictions apply, see<br>amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 59px;left:21px;line-height:1;'><div style='font-size: 30px;letter-spacing: -0.2px;'>Altice One +<br>Internet</div></div>");
-amo.registerAttribute("frameText52","TEXT","<div style='top: 126px;left: 131px;line-height:1.1;'><div style='color: #0084d6;font-size: 69px;'><sup style='font-size: 49%;vertical-align: 63%;margin-right: -1px;'>$</sup>64<sup style='font-size: 49%;vertical-align: 67%;margin-left: 2px;'>99</sup></div><div style='font-size: 15px;letter-spacing: -0.2px;margin-top: -13px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 11px;margin-top: 1px;letter-spacing: -0.1px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText53","TEXT","<div style='top: 240px;left: 21px;line-height: 1.4;font-size: 16px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>$100 Amazon.com Gift Card</div><div><span style='color:#0084d6;padding-right: 5px;'>+</span>No Annual Contract</div></div>");
+amo.registerAttribute("frameText51", "TEXT", "<div style='top: 69px;left: 21px;line-height:1.1;'><div style='font-size: 24px;letter-spacing: -0.4px;'>TV + Fast Internet</div></div>");
+amo.registerAttribute("frameText52", "TEXT", "<div style='top: 91px;left: 17px;line-height:1.1;'><div style='color: #0084d6;font-size: 80px;letter-spacing: -4.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>54<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;'>99</sup></div><div style='font-size: 20px;letter-spacing:-0.1px;margin-top: -11px;margin-left: 3px;'>mo./3 years<div class='AlticeRegular' style='font-size: 12px;margin-top: 3px;letter-spacing: -0.2px;'>plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText53", "TEXT", "<div style='top: 230px;left: 21px;line-height: 1.4;font-size: 18px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>$100 Amazon.com Gift Card</div><div><span style='color:#0084d6;padding-right:5px;'>+</span>No Annual Contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -128,7 +128,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 240px;left: 21px;li
     <div id="frameText51" class="frameText">!{frameText51}</div>
     <div id="frameText52" class="frameText">!{frameText52}</div>
     <div id="frameText53" class="frameText">!{frameText53}</div>
-    <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div>
+    <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
       style="top:539px;
@@ -163,7 +163,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 240px;left: 21px;li
           line-height: 1.2;
           letter-spacing: -0.3px;
           font-weight: bold;
-          color:#292562;">
+          color:#fff;">
       </div>
       <div id="introImage2" class="asset adSizeContainer" data-image="introImage2"></div>
       <div id="introImage1" class="asset adSizeContainer" data-image="introImage1"></div>
@@ -178,9 +178,9 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 240px;left: 21px;li
           line-height: 1.2;
           letter-spacing: -0.3px;
           font-weight: bold;
-          color:#fff;">
+          color:#292562;">
       </div>
-      <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
+      <div id="introLogoImage" class="asset adSizeContainer" data-image="logoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
         style="top:539px;
@@ -213,12 +213,11 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 240px;left: 21px;li
         staticData: {
           logoImage: 'images/300x600_Logo_Optimum.png',
           introLogoImage: 'images/300x600_Logo_Optimum_White.png',
-          priceLabel: '300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
+          // priceLabel: '300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
           frameBackground: '300x600_OPT_Holiday_AO_64_CornerTear_Img_Frame04.png',
-          priceLabel: '300x600_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
-          introImage1: '300x600_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame01.png',
-          introImage2: '300x600_OPT_Holiday_AO_64_WrappingPaper_Half_Img_Frame01.png',
-          introImage3: '300x600_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame02.png',
+          introImage1: '300x600_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_WrappingPaper_Full_Img_Frame01.png',
+          introImage2: '300x600_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_WrappingPaper_Half_Img_Frame02.png',
+          introImage3: '300x600_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_WrappingPaper_Full_Img_Frame02.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
@@ -291,7 +290,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top: 240px;left: 21px;li
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#introImage1, #introText1', {duration:1.8, display:'none'})
           .to('#introImage2', {duration:1, display:'none'})
-          .to('#introLogoImage img', {duration:0, attr:{src: adData.logoImage}})
+          .to('#introLogoImage img', {duration:0, attr:{src: adData.introLogoImage}})
           .to('#frame1', (flag==true?{}:{delay:0.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
         if('frame1' in ad.layers) ad.layers.frame1.remove();
