--- a/A/Altice/Altice_January2020/ads/OPT_AO_64/728x90/728x90.html
+++ b/A/Altice/Altice_January2020/ads/OPT_AO_64/728x90/728x90.html
@@ -78,23 +78,23 @@
 <script type="text/javascript">
 amo.registerClick("clickUrl","http://www.altice.com");
 amo.registerAttribute("ctaText","TEXT","Learn more");
-amo.registerAttribute("frameImage2","IMAGE","728x90_OPT_Holiday_AO_64_Img_Frame02.png");
+amo.registerAttribute("frameImage2","IMAGE","728x90_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_Img_Frame03.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameImage4","IMAGE","728x90_OPT_AmazonCard_100.png");
 amo.registerAttribute("frameImage5","IMAGE","1x1.png");
 amo.registerAttribute("frameText1","TEXT","Get the gift that|keeps on giving");
-amo.registerAttribute("frameText21", "TEXT", "<div style='top: 12px;left:20px;line-height: 1.1;font-size: 22px;'><div style='font-size: 75%;color: #0084d6;letter-spacing: -0.2px;margin-bottom:3px;'>Price for Life</div><div style='letter-spacing:-0.1px;'>Altice One<br>+ Internet</div></div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 4px;left: 152px;line-height:1.1;'><div style='color: #0084d6;font-size: 56px;'><sup style='font-size: 52%;vertical-align: 58%;margin-right: 0px;'>$</sup>64<sup style='font-size: 52%;vertical-align: 58%;/* margin-left: -2px; */'>99</sup></div><div style='font-size: 13px;letter-spacing: -0.3px;position: absolute;top: 52px;left: 1px;width: 150px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10.5px;margin-top: 0px;margin-left: 0px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText23","TEXT","&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top: 8px;left: 19px;line-height: 1.6;font-size: 20px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Up to <font style='color:#0084d6;'>200 Mbps Internet</font></div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top: 31px;left: 19px;line-height: 1.6;font-size: 20px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Over 220 Channels</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top: 53px;left: 19px;line-height: 1.6;font-size: 20px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Voice Activated Remote</div><div class='AlticeRegular' style='position: absolute;top:14px;left:300px;width:250px;font-size: 9.5px;line-height:1;'>Wired connection. WiFi speeds may vary.</div></div>");
+amo.registerAttribute("frameText21", "TEXT", "&nbsp;");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 6px;left:20px;line-height: 1.05;width: 300px;'><div style='font-size: 25px;letter-spacing:-0.1px;display: inline-block;'>TV + Fast Internet</div><div style='position: absolute;color: #0084d6;font-size:60px;top: 21px;left: 0px;letter-spacing: -2.5px;'><sup style='font-size:60%;vertical-align: 50%;'>$</sup>54<sup style='font-size:60%;vertical-align: 50%;letter-spacing: -1px;'>99</sup></div></div>");
+amo.registerAttribute("frameText23", "TEXT", "<div style='top: 42px;left: 148px;font-size: 18px;letter-spacing: -0.3px;'>mo./3 years<div class='AlticeRegular' style='font-size: 12px;margin-top: 0px;margin-left: -40px;letter-spacing: -0.55px;'>plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top: 8px;left: 19px;line-height: 1.6;font-size: 20px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:5px;'>+</span>3 Yr. Price Guarantee!</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 31px;left: 19px;line-height: 1.6;font-size: 20px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Up to 200 Mbps Internet</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top: 53px;left: 19px;line-height: 1.6;font-size: 20px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>Over 220 Channels</div></div><div class='AlticeRegular' style='position: absolute;top:67px;left:300px;width:250px;font-size: 9.5px;line-height:1;'>Wired connection. WiFi speeds may vary.</div>");
 amo.registerAttribute("frameText41","TEXT","<div style='top: 5px;left: 14px;line-height: 1.6;font-size: 16px;letter-spacing: -2px;'><div style='color: #0084d6;font-size: 52px;'><sup style='font-size:60%;vertical-align: 31%;margin-right: -1px;'>$</sup>100</div></div>");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 25px;left: 123px;line-height: 1.1;font-size: 20px;'>Amazon.com Gift Card</div>");
 amo.registerAttribute("frameText43","TEXT","<div class='AlticeRegular' style='top:47px;left:123px;line-height: 1.6;letter-spacing: -0.3px;font-size: 10px;'>Restrictions apply, see amazon.com/gc-legal</div>");
-amo.registerAttribute("frameText51","TEXT","<div style='top: 8px;left: 120px;line-height:1.1;'><div style='font-size: 18px;letter-spacing: -0.2px;'>Altice One + Internet</div></div>");
-amo.registerAttribute("frameText52","TEXT","<div style='top: 20px;left: 117px;line-height:1.1;'><div style='color: #0084d6;font-size: 56px;'><sup style='font-size: 52%;vertical-align: 58%;margin-right: 0px;'>$</sup>64<sup style='font-size: 52%;vertical-align: 58%;/* margin-left: -2px; */'>99</sup></div><div style='font-size: 13px;letter-spacing: -0.3px;position: absolute;top: 37px;left: 88px;width: 100px;'>mo. <font style='color:#0084d6;'>for life</font><div class='AlticeRegular' style='font-size: 10.5px;margin-top: 0px;margin-left: -87px;'>plus taxes, fees &amp; charges</div></div></div>");
-amo.registerAttribute("frameText53","TEXT","<div style='top:29px;left:320px;line-height:1.3;font-size:15px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>$100 Amazon.com Gift Card</div><div><span style='color:#0084d6;padding-right:5px;'>+</span>No Annual Contract</div></div>");
+amo.registerAttribute("frameText51", "TEXT", "<div style='top: 6px;left:20px;line-height:1.1;'><span style='font-size: 24px;letter-spacing: 0.2px;'>TV + Fast Internet</span></div>");
+amo.registerAttribute("frameText52", "TEXT", "<div style='top: 28px;left: 22px;line-height:1.1;'><div style='color: #0084d6;font-size:60px;margin-top:-4px;margin-left: -3px;letter-spacing:-2.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>54<sup style='font-size:60%;vertical-align:43%;letter-spacing: -1px;margin-left: 0px;'>99</sup></div><div style='position: relative;font-size: 18px;letter-spacing:-0.1px;top: -45px;left: 125px;'>mo./3 years<div class='AlticeRegular' style='font-size: 11px;margin-top: 4px;margin-left: -39px;'>plus taxes, fees &amp; charges</div></div></div>");
+amo.registerAttribute("frameText53", "TEXT", "<div style='top:26px;left:320px;line-height:1.3;font-size:15px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>$100 Amazon.com Gift Card</div><div><span style='color:#0084d6;padding-right:5px;'>+</span>No Annual Contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -128,7 +128,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:29px;left:320px;line
     <div id="frameText51" class="frameText">!{frameText51}</div>
     <div id="frameText52" class="frameText">!{frameText52}</div>
     <div id="frameText53" class="frameText">!{frameText53}</div>
-    <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div>
+    <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
       style="top:58px;
@@ -162,7 +162,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:29px;left:320px;line
           font-size: 33px;
           letter-spacing: 0px;
           font-weight: bold;
-          color:#292562;">
+          color:#fff;">
       </div>
       <div id="introImage2" class="asset adSizeContainer" data-image="introImage2"></div>
       <div id="introImage1" class="asset adSizeContainer" data-image="introImage1"></div>
@@ -176,9 +176,9 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:29px;left:320px;line
           font-size: 33px;
           letter-spacing: 0px;
           font-weight: bold;
-          color:#fff;">
+          color:#292562;">
       </div>
-      <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
+      <div id="introLogoImage" class="asset adSizeContainer" data-image="logoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
         style="top:58px;
@@ -211,12 +211,11 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:29px;left:320px;line
         staticData: {
           logoImage: 'images/728x90_Logo_Optimum.png',
           introLogoImage: 'images/728x90_Logo_Optimum_White.png',
-          priceLabel: '728x90_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
+          // priceLabel: '728x90_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
           frameBackground: '728x90_OPT_Holiday_AO_64_CornerTear_Img_Frame04.png',
-          priceLabel: '728x90_OPT_AugPFL_ACQ_AO_Amz_64PFL_NonSub_NY_Img_Frame05.png',
-          introImage1: '728x90_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame01.png',
-          introImage2: '728x90_OPT_Holiday_AO_64_WrappingPaper_Half_Img_Frame01.png',
-          introImage3: '728x90_OPT_Holiday_AO_64_WrappingPaper_Full_Img_Frame02.png',
+          introImage1: '728x90_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_WrappingPaper_Full_Img_Frame01.png',
+          introImage2: '728x90_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_WrappingPaper_Half_Img_Frame02.png',
+          introImage3: '728x90_OPT_HOL_ACQ_iStart_TV&Int_49Yr1_NonSub_NY_WrappingPaper_Full_Img_Frame02.png',
           // starImage: 'images/star.svg',
           ctaBtn: '#0084d6',
           ctaBtnHover: '#005990',
@@ -292,7 +291,7 @@ amo.registerAttribute("frameText53","TEXT","<div style='top:29px;left:320px;line
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#introImage1, #introText1', {duration:1.8, display:'none'})
           .to('#introImage2', {duration:1, display:'none'})
-          .to('#introLogoImage img', {duration:0, attr:{src: adData.logoImage}})
+          .to('#introLogoImage img', {duration:0, attr:{src: adData.introLogoImage}})
           .to('#frame1', (flag==true?{}:{delay:0.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
         gsap.delayedCall(.8, animateFrame1);
